# Copyright 2016 Google, LLC
#
# Permission is hereby granted, free of charge, to any person obtaining a
# copy of this software and associated documentation files (the "Software"),
# to deal in the Software without restriction, including without limitation
# the rights to use, copy, modify, merge, publish, distribute, sublicense,
# and/or sell copies of the Software, and to permit persons to whom the
# Software is furnished to do so, subject to the following conditions:
#
# The above copyright notice and this permission notice (including the next
# paragraph) shall be included in all copies or substantial portions of the
# Software.
#
# THE SOFTWARE IS PROVIDED "AS IS", WITHOUT WARRANTY OF ANY KIND, EXPRESS OR
# IMPLIED, INCLUDING BUT NOT LIMITED TO THE WARRANTIES OF MERCHANTABILITY,
# FITNESS FOR A PARTICULAR PURPOSE AND NONINFRINGEMENT.  IN NO EVENT SHALL
# THE AUTHORS OR COPYRIGHT HOLDERS BE LIABLE FOR ANY CLAIM, DAMAGES OR OTHER
# LIABILITY, WHETHER IN AN ACTION OF CONTRACT, TORT OR OTHERWISE, ARISING
# FROM, OUT OF OR IN CONNECTION WITH THE SOFTWARE OR THE USE OR OTHER DEALINGS
# IN THE SOFTWARE.

import("../../../mesa.gni")

mesa_python_stdout_to_file_action("gen_pack7_header") {
  output = "gen7_pack.h"
  script = "gen_pack_header.py"

  inputs = [ "gen7.xml" ]
  args = [ rebase_path(".") + "/gen7.xml" ]
}

mesa_python_stdout_to_file_action("gen_pack75_header") {
  output = "gen75_pack.h"
  script = "gen_pack_header.py"
  inputs = [ "gen75.xml" ]
  args = [ rebase_path(".") + "/gen75.xml" ]
}

mesa_python_stdout_to_file_action("gen_pack8_header") {
  output = "gen8_pack.h"
  script = "gen_pack_header.py"
  inputs = [ "gen8.xml" ]
  args = [ rebase_path(".") + "/gen8.xml" ]
}

mesa_python_stdout_to_file_action("gen_pack9_header") {
  output = "gen9_pack.h"
  script = "gen_pack_header.py"
  inputs = [ "gen9.xml" ]
  args = [ rebase_path(".") + "/gen9.xml" ]
}

mesa_python_stdout_to_file_action("gen_pack10_header") {
  output = "gen10_pack.h"
  script = "gen_pack_header.py"
  inputs = [ "gen10.xml" ]
  args = [ rebase_path(".") + "/gen10.xml" ]
}

mesa_python_stdout_to_file_action("gen_pack11_header") {
  output = "gen11_pack.h"
  script = "gen_pack_header.py"
  inputs = [ "gen11.xml" ]
  args = [ rebase_path(".") + "/gen11.xml" ]
}

mesa_python_stdout_to_file_action("gen_pack12_header") {
  output = "gen12_pack.h"
  script = "gen_pack_header.py"
  inputs = [ "gen12.xml" ]
  args = [ rebase_path(".") + "/gen12.xml" ]
}

mesa_python_stdout_to_file_action("gen_bits_header") {
  output = "genX_bits.h"
  script = "gen_bits_header.py"
  inputs = [
    "gen10.xml",
    "gen11.xml",
    "gen12.xml",
    "gen7.xml",
    "gen75.xml",
    "gen8.xml",
    "gen9.xml",
  ]
  args = [
    rebase_path(".") + "/gen7.xml",
    rebase_path(".") + "/gen75.xml",
    rebase_path(".") + "/gen8.xml",
    rebase_path(".") + "/gen9.xml",
    rebase_path(".") + "/gen10.xml",
    rebase_path(".") + "/gen11.xml",
    rebase_path(".") + "/gen12.xml",
  ]
}
