# Copyright 2016 The Fuchsia Authors
#
# Permission is hereby granted, free of charge, to any person obtaining a
# copy of this software and associated documentation files (the "Software"),
# to deal in the Software without restriction, including without limitation
# the rights to use, copy, modify, merge, publish, distribute, sublicense,
# and/or sell copies of the Software, and to permit persons to whom the
# Software is furnished to do so, subject to the following conditions:
#
# The above copyright notice and this permission notice (including the next
# paragraph) shall be included in all copies or substantial portions of the
# Software.
#
# THE SOFTWARE IS PROVIDED "AS IS", WITHOUT WARRANTY OF ANY KIND, EXPRESS OR
# IMPLIED, INCLUDING BUT NOT LIMITED TO THE WARRANTIES OF MERCHANTABILITY,
# FITNESS FOR A PARTICULAR PURPOSE AND NONINFRINGEMENT.  IN NO EVENT SHALL
# THE AUTHORS OR COPYRIGHT HOLDERS BE LIABLE FOR ANY CLAIM, DAMAGES OR OTHER
# LIABILITY, WHETHER IN AN ACTION OF CONTRACT, TORT OR OTHERWISE, ARISING
# FROM, OUT OF OR IN CONNECTION WITH THE SOFTWARE OR THE USE OR OTHER DEALINGS
# IN THE SOFTWARE.

import("//garnet/lib/magma/gnbuild/magma.gni")

config("math_public_config") {
  include_dirs = [
    ".",
    "..",
  ]
}

source_set("math") {
  public_configs = [
    ":math_public_config",
    "$mesa_build_root/src:common_config",
  ]

  include_dirs = [ "$mesa_build_root/src/mapi" ]

  deps = [
    "$mesa_build_root/include:c_compat",
    "$mesa_build_root/src/util",
  ]

  sources = [
    "m_clip_tmp.h",
    "m_copy_tmp.h",
    "m_debug.h",
    "m_debug_clip.c",
    "m_debug_norm.c",
    "m_debug_util.h",
    "m_debug_xform.c",
    "m_dotprod_tmp.h",
    "m_eval.c",
    "m_eval.h",
    "m_matrix.c",
    "m_matrix.h",
    "m_norm_tmp.h",
    "m_trans_tmp.h",
    "m_translate.c",
    "m_translate.h",
    "m_vector.c",
    "m_vector.h",
    "m_xform.c",
    "m_xform.h",
    "m_xform_tmp.h",
  ]
}
