# Copyright 2016 The Fuchsia Authors
#
# Permission is hereby granted, free of charge, to any person obtaining a
# copy of this software and associated documentation files (the "Software"),
# to deal in the Software without restriction, including without limitation
# the rights to use, copy, modify, merge, publish, distribute, sublicense,
# and/or sell copies of the Software, and to permit persons to whom the
# Software is furnished to do so, subject to the following conditions:
#
# The above copyright notice and this permission notice (including the next
# paragraph) shall be included in all copies or substantial portions of the
# Software.
#
# THE SOFTWARE IS PROVIDED "AS IS", WITHOUT WARRANTY OF ANY KIND, EXPRESS OR
# IMPLIED, INCLUDING BUT NOT LIMITED TO THE WARRANTIES OF MERCHANTABILITY,
# FITNESS FOR A PARTICULAR PURPOSE AND NONINFRINGEMENT.  IN NO EVENT SHALL
# THE AUTHORS OR COPYRIGHT HOLDERS BE LIABLE FOR ANY CLAIM, DAMAGES OR OTHER
# LIABILITY, WHETHER IN AN ACTION OF CONTRACT, TORT OR OTHERWISE, ARISING
# FROM, OUT OF OR IN CONNECTION WITH THE SOFTWARE OR THE USE OR OTHER DEALINGS
# IN THE SOFTWARE.

import("//garnet/lib/magma/gnbuild/magma.gni")

config("swrast_public_config") {
  include_dirs = [ "." ]
}

source_set("swrast") {
  public_configs = [
    "$mesa_build_root/src:common_config",
    ":swrast_public_config",
  ]

  deps = [
    "../swrast_setup",
    "$mesa_build_root/include:GL",
    "$mesa_build_root/src/mapi/glapi",
    "$mesa_build_root/src/util",
  ]

  include_dirs = [ "$mesa_build_root/src/mesa/main" ]

  sources = [
    "s_aaline.c",
    "s_aaline.h",
    "s_aalinetemp.h",
    "s_aatriangle.c",
    "s_aatriangle.h",
    "s_aatritemp.h",
    "s_alpha.c",
    "s_alpha.h",
    "s_atifragshader.c",
    "s_atifragshader.h",
    "s_bitmap.c",
    "s_blend.c",
    "s_blend.h",
    "s_blit.c",
    "s_chan.h",
    "s_clear.c",
    "s_context.c",
    "s_context.h",
    "s_copypix.c",
    "s_depth.c",
    "s_depth.h",
    "s_drawpix.c",
    "s_feedback.c",
    "s_feedback.h",
    "s_fog.c",
    "s_fog.h",
    "s_fragprog.c",
    "s_fragprog.h",
    "s_lines.c",
    "s_lines.h",
    "s_linetemp.h",
    "s_logic.c",
    "s_logic.h",
    "s_masking.c",
    "s_masking.h",
    "s_points.c",
    "s_points.h",
    "s_renderbuffer.c",
    "s_renderbuffer.h",
    "s_span.c",
    "s_span.h",
    "s_stencil.c",
    "s_stencil.h",
    "s_texcombine.c",
    "s_texcombine.h",
    "s_texfetch.c",
    "s_texfetch.h",
    "s_texfetch_tmp.h",
    "s_texfilter.c",
    "s_texfilter.h",
    "s_texrender.c",
    "s_texture.c",
    "s_triangle.c",
    "s_triangle.h",
    "s_tritemp.h",
    "s_zoom.c",
    "s_zoom.h",
    "swrast.h",
  ]
}
