# Copyright 2016 The Fuchsia Authors
#
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
#     http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.

import("//gnbuild/magma.gni")

config("swrast_setup_public_config") {
  include_dirs = [ "." ]
}

source_set("swrast_setup") {
  public_configs = [
    "$mesa_build_root/src:common_config",
    ":swrast_setup_public_config",
  ]

  deps = [
    "$mesa_build_root/include:GL",
    "$mesa_build_root/src/mapi/glapi",
    "$mesa_build_root/src/util",
  ]

  include_dirs = [ "$mesa_build_root/src/mesa/main" ]

  sources = [
    "ss_context.c",
    "ss_context.h",
    "ss_triangle.c",
    "ss_triangle.h",
    "ss_tritmp.h",
    "ss_vb.h",
    "swrast_setup.h",
  ]
}
