# Copyright 2016 The Fuchsia Authors
#
# Permission is hereby granted, free of charge, to any person obtaining a
# copy of this software and associated documentation files (the "Software"),
# to deal in the Software without restriction, including without limitation
# the rights to use, copy, modify, merge, publish, distribute, sublicense,
# and/or sell copies of the Software, and to permit persons to whom the
# Software is furnished to do so, subject to the following conditions:
#
# The above copyright notice and this permission notice (including the next
# paragraph) shall be included in all copies or substantial portions of the
# Software.
#
# THE SOFTWARE IS PROVIDED "AS IS", WITHOUT WARRANTY OF ANY KIND, EXPRESS OR
# IMPLIED, INCLUDING BUT NOT LIMITED TO THE WARRANTIES OF MERCHANTABILITY,
# FITNESS FOR A PARTICULAR PURPOSE AND NONINFRINGEMENT.  IN NO EVENT SHALL
# THE AUTHORS OR COPYRIGHT HOLDERS BE LIABLE FOR ANY CLAIM, DAMAGES OR OTHER
# LIABILITY, WHETHER IN AN ACTION OF CONTRACT, TORT OR OTHERWISE, ARISING
# FROM, OUT OF OR IN CONNECTION WITH THE SOFTWARE OR THE USE OR OTHER DEALINGS
# IN THE SOFTWARE.

import("//garnet/lib/magma/gnbuild/magma.gni")

source_set("tnl") {
  public_configs = [ "$mesa_build_root/src:common_config" ]

  deps = [
    "$mesa_build_root/include:c_compat",
    "$mesa_build_root/src/mapi/glapi",
    "$mesa_build_root/src/util",
  ]

  sources = [
    "t_context.c",
    "t_context.h",
    "t_draw.c",
    "t_pipeline.c",
    "t_pipeline.h",
    "t_vb_cliptmp.h",
    "t_vb_fog.c",
    "t_vb_light.c",
    "t_vb_lighttmp.h",
    "t_vb_normals.c",
    "t_vb_points.c",
    "t_vb_program.c",
    "t_vb_render.c",
    "t_vb_rendertmp.h",
    "t_vb_texgen.c",
    "t_vb_texmat.c",
    "t_vb_vertex.c",
    "t_vertex.c",
    "t_vertex.h",
    "t_vertex_generic.c",
    "t_vertex_sse.c",
    "t_vp_build.c",
    "t_vp_build.h",
    "tnl.h",
  ]
}
