# Copyright 2016 The Fuchsia Authors
#
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
#     http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.

import("//magma/gnbuild/magma.gni")

config("vbo_public_config") {
  include_dirs = [
    ".",
    "..",
  ]
}

source_set("vbo") {
  public_configs = [ ":vbo_public_config" ]

  include_dirs = [ "$mesa_build_root/src/mesa" ]

  deps = [
    "$mesa_build_root/include:c_compat",
    "$mesa_build_root/src/mapi/glapi",
    "$mesa_build_root/src/util",
  ]

  sources = [
    "vbo.h",
    "vbo_attrib.h",
    "vbo_attrib_tmp.h",
    "vbo_context.c",
    "vbo_context.h",
    "vbo_exec.c",
    "vbo_exec.h",
    "vbo_exec_api.c",
    "vbo_exec_array.c",
    "vbo_exec_draw.c",
    "vbo_exec_eval.c",
    "vbo_minmax_index.c",
    "vbo_noop.c",
    "vbo_noop.h",
    "vbo_primitive_restart.c",
    "vbo_rebase.c",
    "vbo_save.c",
    "vbo_save.h",
    "vbo_save_api.c",
    "vbo_save_draw.c",
    "vbo_save_loopback.c",
    "vbo_split.c",
    "vbo_split.h",
    "vbo_split_copy.c",
    "vbo_split_inplace.c",
  ]
}
